--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="all.css" />
+    <link rel="stylesheet" href="all2.css" />
   </head>
   <body>
     <h1>Hello Git</h1>
